--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 version: "3.8"
 
 services:
-  loadbalancer:
-    build:
-      context: ./filemanager
-      dockerfile: Dockerfile
-    ports:
-      - "8080:8080"
-    environment:
-      - STORAGE_CONTAINERS=http://storage1:8081,http://storage2:8082
-    depends_on:
-      - storage1
-      - storage2
+#   loadbalancer:
+#     build:
+#       context: ./cloudbackend
+#       dockerfile: Dockerfile
+#     ports:
+#       - "8080:8080"
+#     environment:
+#       - STORAGE_CONTAINERS=http://storage1:8081,http://storage2:8082
+#     depends_on:
+#       - storage1
+#       - storage2
 
   storage1:
     build:
