--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -45,6 +45,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <version>3.4.2</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -53,6 +59,7 @@
             <version>1.18.22</version>
             <scope>provided</scope>
         </dependency>
+
 
     </dependencies>
     <build>
