--- a/cloudbackend/pom.xml
+++ b/cloudbackend/pom.xml
@@ -79,7 +79,7 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.36</version>
-            <scope>provided</scope>
+<!--            <scope>provided</scope>-->
             <optional>true</optional>
         </dependency>
         <dependency>
