--- a/cloudbackend/src/main/resources/application.properties
+++ b/cloudbackend/src/main/resources/application.properties
@@ -15,3 +15,6 @@ management.endpoints.web.exposure.include=health,info,prometheus
 server.tomcat.connection-timeout=60000
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=200MB
+
+spring.main.allow-bean-definition-overriding=true
+ssh.port=2222
