--- a/cloudbackend/pom.xml
+++ b/cloudbackend/pom.xml
@@ -45,6 +45,11 @@
             <version>4.5.13</version>
         </dependency>
         <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
