--- a/cloudbackend/src/main/resources/application.properties
+++ b/cloudbackend/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=cloudbackend
 
-spring.datasource.url=jdbc:sqlite:mydatabase.db
-spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=myuser
+spring.datasource.password=mypassword
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=update
 
 server.port=8080
