--- a/cloudbackend/Dockerfile
+++ b/cloudbackend/Dockerfile
@@ -1,5 +1,14 @@
+# Use an OpenJDK base image
 FROM openjdk:17-jdk-slim
+
+# Set the working directory inside the container
 WORKDIR /app
-COPY target/cloudbackend-0.0.1-SNAPSHOT.jar app.jar
+
+# Copy the JAR file into the container
+COPY cloudbackend-0.0.1-SNAPSHOT.jar app.jar
+
+# Expose port 8080
 EXPOSE 8080
+
+# Run the application
 ENTRYPOINT ["java", "-jar", "app.jar"]
