--- a/cloudbackend/src/main/resources/application.properties
+++ b/cloudbackend/src/main/resources/application.properties
@@ -21,3 +21,6 @@ spring.servlet.multipart.max-request-size=200MB
 
 spring.main.allow-bean-definition-overriding=true
 ssh.port=2222
+
+logging.file.name=logs/application.log
+logging.level.root=INFO
